--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^3.0.3",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -33,6 +34,7 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.21",
     "cypress": "^15.3.0",
     "eslint": "^9.33.0",
     "eslint-plugin-cypress": "^5.1.1",
@@ -40,8 +42,10 @@
     "jiti": "^2.5.1",
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
+    "postcss": "^8.5.6",
     "prettier": "3.6.2",
     "start-server-and-test": "^2.1.2",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.0",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2",
